<resources>
    <string name="app_name">OSM</string>
    <string name="welcome_back">Welcome!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">Message...</string>
    <string name="online">Online</string>
    <string name="tell_about_yourself">Tell about yourself</string>
</resources>